--- a/index.html
+++ b/index.html
@@ -1,4 +1,79 @@
 ---
-layout: home
-author_profile: true
+title: "María Martínez-Barbeito"
+layout: splash
+header:
+  overlay_color: "#000"
+  overlay_filter: "0.5"
+  overlay_image: /assets/images/tramuntana.jpg
+  actions:
+  - label: "Email"
+    # icon: "fas fa-fw fa-envelope-square"
+    url: "mailto:maria@ifisc.uib-csic.es"
+  - label: "Twitter"
+    # icon: "fab fa-fw fa-twitter-square"
+    url: "https://twitter.com/mariamartinz13"
+  - label: "Google Scholar"
+    # icon: "fas fa-graduation-cap"
+    url: "https://scholar.google.com/citations?user=5us7cmgAAAAJ&hl=es&oi=ao"
+  - label: "ORCID"
+    # icon: "fab fa-orcid"
+    url: "https://orcid.org/0000-0003-0887-9374"
+  - label: "Linkedin"
+    # icon: "fab fa-linkedin"
+    url: "https://www.linkedin.com/in/mariamartinezbarbeito"
+  caption: "Serra de Tramuntana, Mallorca"
+excerpt: "Welcome to my personal website! I use this space to talk about my research, as well as personal projects and interests."
+intro: 
+  - excerpt: ' <em>"The best time to fight climate change and global warming was 30 years ago. <br> The second best time is now." </em>'
+
+feature_row:
+  - image_path: assets/images/project2.png
+    image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)"
+    alt: "placeholder image 1"
+    title: "Placeholder 1"
+    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+  - image_path: /assets/images/project3.png
+    alt: "placeholder image 2"
+    title: "Placeholder 2"
+    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
+  - image_path: /assets/images/project1.png
+    title: "Placeholder 3"
+    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+feature_row2:
+  - image_path: /assets/images/project2.png
+    alt: "placeholder image 2"
+    title: "Placeholder Image Left Aligned"
+    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Left aligned with `type="left"`'
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
+feature_row3:
+  - image_path: /assets/images/project3.png
+    alt: "placeholder image 2"
+    title: "Placeholder Image Right Aligned"
+    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Right aligned with `type="right"`'
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
+feature_row4:
+  - image_path: /assets/images/project1.png
+    alt: "placeholder image 2"
+    title: "Placeholder Image Center Aligned"
+    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Centered with `type="center"`'
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
 ---
+
+{% include feature_row id="intro" type="center" %}
+
+<!-- {% include feature_row %} -->
+
+<!-- {% include feature_row id="feature_row2" type="left" %} -->
+
+<!-- {% include feature_row id="feature_row3" type="right" %}
+
+{% include feature_row id="feature_row4" type="center" %} -->
