--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ header:
   caption: "Serra de Tramuntana, Mallorca"
 excerpt: "Welcome to my personal website! I use this space to talk about my research, as well as personal projects and interests."
 intro: 
-  - excerpt: ' <em>"The best time to fight climate change and global warming was 30 years ago. <br> The second best time is now." </em>'
+  - excerpt: ' <em>"The best time to fight climate change was 30 years ago. <br> The second best time is now." </em>'
 
 feature_row:
   - image_path: assets/images/project2.png
