--- a/index.html
+++ b/index.html
@@ -7,24 +7,19 @@ header:
   overlay_image: /assets/images/tramuntana.jpg
   actions:
   - label: "Email"
-    # icon: "fas fa-fw fa-envelope-square"
     url: "mailto:maria@ifisc.uib-csic.es"
   - label: "Twitter"
-    # icon: "fab fa-fw fa-twitter-square"
     url: "https://twitter.com/mariamartinz13"
   - label: "Google Scholar"
-    # icon: "fas fa-graduation-cap"
     url: "https://scholar.google.com/citations?user=5us7cmgAAAAJ&hl=es&oi=ao"
   - label: "ORCID"
-    # icon: "fab fa-orcid"
     url: "https://orcid.org/0000-0003-0887-9374"
-  - label: "Linkedin"
-    # icon: "fab fa-linkedin"
+  - label: "LinkedIn"
     url: "https://www.linkedin.com/in/mariamartinezbarbeito"
   caption: "Serra de Tramuntana, Mallorca"
 excerpt: "Welcome to my personal website! I use this space to talk about my research, as well as personal projects and interests."
 intro: 
-  - excerpt: ' <em>"The best time to fight climate change was 30 years ago. <br> The second best time is now." </em>'
+  - excerpt: ' <em>"The best time to fight climate change was 30 years ago.<br>The second best time is now." </em>'
 
 feature_row:
   - image_path: assets/images/project2.png
@@ -42,6 +37,10 @@ feature_row:
   - image_path: /assets/images/project1.png
     title: "Placeholder 3"
     excerpt: "This is some sample content that goes here with **Markdown** formatting."
+  - image_path: /assets/images/project2.png
+    title: "Placeholder 4"
+    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+
 feature_row2:
   - image_path: /assets/images/project2.png
     alt: "placeholder image 2"
@@ -69,6 +68,7 @@ feature_row4:
 ---
 
 {% include feature_row id="intro" type="center" %}
+
 
 <!-- {% include feature_row %} -->
 
