--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: "María Martínez-Barbeito"
+title: "María Martínez Barbeito"
 layout: splash
 header:
   overlay_color: "#000"
@@ -17,57 +17,30 @@ header:
   - label: "LinkedIn"
     url: "https://www.linkedin.com/in/mariamartinezbarbeito"
   caption: "Serra de Tramuntana, Mallorca"
-excerpt: "Welcome to my personal website! I use this space to talk about my research, as well as personal projects and interests."
+excerpt: " "
 intro: 
-  - excerpt: ' <em>"The best time to fight climate change was 30 years ago.<br>The second best time is now." </em>'
-
-feature_row:
-  - image_path: assets/images/project2.png
-    image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)"
-    alt: "placeholder image 1"
-    title: "Placeholder 1"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
-  - image_path: /assets/images/project3.png
-    alt: "placeholder image 2"
-    title: "Placeholder 2"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
-    url: "#test-link"
-    btn_label: "Read More"
-    btn_class: "btn--primary"
-  - image_path: /assets/images/project1.png
-    title: "Placeholder 3"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
-  - image_path: /assets/images/project2.png
-    title: "Placeholder 4"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
-
-feature_row2:
-  - image_path: /assets/images/project2.png
-    alt: "placeholder image 2"
-    title: "Placeholder Image Left Aligned"
-    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Left aligned with `type="left"`'
-    url: "#test-link"
-    btn_label: "Read More"
-    btn_class: "btn--primary"
-feature_row3:
-  - image_path: /assets/images/project3.png
-    alt: "placeholder image 2"
-    title: "Placeholder Image Right Aligned"
-    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Right aligned with `type="right"`'
-    url: "#test-link"
-    btn_label: "Read More"
-    btn_class: "btn--primary"
-feature_row4:
-  - image_path: /assets/images/project1.png
-    alt: "placeholder image 2"
-    title: "Placeholder Image Center Aligned"
-    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Centered with `type="center"`'
-    url: "#test-link"
-    btn_label: "Read More"
-    btn_class: "btn--primary"
+  - excerpt: ' <br> '
 ---
+<!-- 
+{% include feature_row id="intro" type="center" %} -->
 
-{% include feature_row id="intro" type="center" %}
+<!-- 
+<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
+
+{% if paginator %}
+  {% assign posts = paginator.posts %}
+{% else %}
+  {% assign posts = site.posts %}
+{% endif %}
+
+{% assign entries_layout = page.entries_layout | default: 'list' %}
+<div class="entries-{{ entries_layout }}">
+  {% for post in posts %}
+    {% include archive-single.html type=entries_layout %}
+  {% endfor %}
+</div>
+
+{% include paginator.html %} -->
 
 
 <!-- {% include feature_row %} -->
