--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ header:
   - label: "LinkedIn"
     url: "https://www.linkedin.com/in/mariamartinezbarbeito"
   caption: "Serra de Tramuntana, Mallorca"
-excerpt: " "
+excerpt: " <br> "
 intro: 
-  - excerpt: ' <br> '
+  - excerpt: ''
 ---
-<!-- 
-{% include feature_row id="intro" type="center" %} -->
+
+<!-- {% include feature_row id="intro" type="center" %} -->
 
 <!-- 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
