--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ header:
   overlay_image: /assets/images/tramuntana.jpg
   actions:
   - label: "Email"
-    url: "mailto:maria@ifisc.uib-csic.es"
+    url: "mailto:martinezbarbeitomaria@gmail.com"
   - label: "Twitter"
     url: "https://twitter.com/mariamartinz13"
   - label: "Google Scholar"
