--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@ header:
   actions:
   - label: "Email"
     url: "mailto:martinezbarbeitomaria@gmail.com"
-  - label: "Twitter"
-    url: "https://twitter.com/mariamartinz13"
   - label: "Google Scholar"
     url: "https://scholar.google.com/citations?user=5us7cmgAAAAJ&hl=es&oi=ao"
   - label: "ORCID"
     url: "https://orcid.org/0000-0003-0887-9374"
   - label: "LinkedIn"
     url: "https://www.linkedin.com/in/mariamartinezbarbeito"
-  caption: "Serra de Tramuntana, Mallorca"
+  caption: " "
 excerpt: " <br> "
 intro: 
   - excerpt: ''
