July 8th, 2025. Added photos and changed index page.

--- a/index.html
+++ b/index.html
@@ -15,36 +15,15 @@ header:
   - label: "LinkedIn"
     url: "https://www.linkedin.com/in/mariamartinezbarbeito"
   caption: " "
-excerpt: " <br> "
+excerpt: "
+  Hi there, and welcome! 
+  <br>
+  <br>
+  This is my personal corner of the internet, where I've gathered a mix of professional milestones and personal adventures.
+  <br>
+  <br>
+  Feel free to explore — and if you'd like to get in touch or learn more, follow the links below.
+"
 intro: 
   - excerpt: ''
 ---
-
-<!-- {% include feature_row id="intro" type="center" %} -->
-
-<!-- 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
-
-{% if paginator %}
-  {% assign posts = paginator.posts %}
-{% else %}
-  {% assign posts = site.posts %}
-{% endif %}
-
-{% assign entries_layout = page.entries_layout | default: 'list' %}
-<div class="entries-{{ entries_layout }}">
-  {% for post in posts %}
-    {% include archive-single.html type=entries_layout %}
-  {% endfor %}
-</div>
-
-{% include paginator.html %} -->
-
-
-<!-- {% include feature_row %} -->
-
-<!-- {% include feature_row id="feature_row2" type="left" %} -->
-
-<!-- {% include feature_row id="feature_row3" type="right" %}
-
-{% include feature_row id="feature_row4" type="center" %} -->
