--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ header:
     url: "https://orcid.org/0000-0003-0887-9374"
   - label: "LinkedIn"
     url: "https://www.linkedin.com/in/mariamartinezbarbeito"
+  - label: "CV"
+    url: "assets/cv/CV_martinezbarbeito_2025-07-09.pdf"
   caption: " "
 excerpt: "
   Hi there, and welcome! 
